Add bank service, dao inmemory create tests for bank