@@ -5,6 +5,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
 public class SortReverseArgumentsProvider
@@ -32,7 +33,17 @@ public class SortReverseArgumentsProvider
                 Arguments.of(Arrays.asList("Java", "is", "FUN", "!"),
                              Arrays.asList("is", "Java", "FUN", "!")),
                 Arguments.of(Arrays.asList("a", "b", "c", "d"),
-                             Arrays.asList("d", "c", "b", "a"))
+                             Arrays.asList("d", "c", "b", "a")),
+                Arguments.of(Arrays.asList("apple", "banana", "cherry"), Arrays.asList("cherry", "banana", "apple")),
+                Arguments.of(Arrays.asList("a", "b", "c"), Arrays.asList("c", "b", "a")),
+                Arguments.of(Arrays.asList("hello", "world"), Arrays.asList("world", "hello")),
+                Arguments.of(List.of(""), List.of("")),
+                Arguments.of(Arrays.asList("same", "same", "same"), Arrays.asList("same", "same", "same")),
+                Arguments.of(Arrays.asList("aBc", "dEf", "GhI"), Arrays.asList("dEf", "aBc", "GhI")),
+                Arguments.of(Arrays.asList("123", "456", "789"), Arrays.asList("789", "456", "123")),
+                Arguments.of(Arrays.asList("!", "@", "#"), Arrays.asList("@", "#", "!")),
+                Arguments.of(Arrays.asList("The", "quick", "brown", "fox"), Arrays.asList("quick", "fox", "brown", "The")),
+                Arguments.of(Arrays.asList("null", "test", ""), Arrays.asList("test", "null", ""))
         );
     }
 }
