@@ -5,6 +5,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
 public class SumOfOddNumbersArgumentsProvider
@@ -22,7 +23,17 @@ public class SumOfOddNumbersArgumentsProvider
                 Arguments.of(Arrays.asList(100, 200, 300, 400, 500, 601, 700, 800, 900, 1000), 601),
                 Arguments.of(Arrays.asList(5, 15, 25, 35, 45, 55, 65, 75, 85, 95), 500),
                 Arguments.of(Arrays.asList(-1, -2, -3, -4, -5, -6, -7, -8, -9, -10), -25),
-                Arguments.of(Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9), 25)
+                Arguments.of(Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9), 25),
+                Arguments.of(Arrays.asList(1, 3, 5), 9),
+                Arguments.of(Arrays.asList(2, 4, 6), 0),
+                Arguments.of(Arrays.asList(1, 2, 3, 4, 5), 9),
+                Arguments.of(Arrays.asList(-1, 0, 1, 2), 0),
+                Arguments.of(List.of(), 0),
+                Arguments.of(List.of(1), 1),
+                Arguments.of(Arrays.asList(1, 1, 1), 3),
+                Arguments.of(Arrays.asList(Integer.MAX_VALUE, 1), Integer.MIN_VALUE),
+                Arguments.of(Arrays.asList(Integer.MIN_VALUE, 1), 1),
+                Arguments.of(Arrays.asList(Integer.MAX_VALUE / 2, Integer.MIN_VALUE / 2), Integer.MAX_VALUE / 2)
         );
     }
 }
